@@ -93,8 +93,13 @@
         <artifactId>maven-compiler-plugin</artifactId>
         <version>3.10.1</version>
         <configuration>
-          <source>11</source>
-          <target>11</target>
+          <source>21</source>
+          <target>21</target>
+	  <fork>true</fork>
+                <compilerArgs>
+                    <arg>--add-exports</arg>
+                    <arg>jdk.compiler/com.sun.tools.javac.processing=ALL-UNNAMED</arg>
+                </compilerArgs>
         </configuration>
       </plugin>
     </plugins>
